# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "apps"
version = "1.0.1"
authors = [ "Microsoft Corporation" ]
description = "Demo Applications for Demikernel"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/apps"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"

[[bin]]
name = "tcp-dump"

[[bin]]
name = "tcp-echo"

[[bin]]
name = "tcp-pktgen"

[[bin]]
name = "udp-dump"

[[bin]]
name = "udp-echo"

[[bin]]
name = "udp-pktgen"

[[bin]]
name = "udp-relay"

[dependencies]
anyhow = "1.0.57"
clap = "3.1.18"
libc = "0.2.126"
log = "0.4.17"

demikernel = { git = "https://github.com/demikernel/demikernel", rev = "65fd747b1c53fe9e271b68e8927b530c66a6b2c8" }

[patch."https://github.com/demikernel/demikernel"]
demikernel = { path = "/home/users/fabricio/msr/demikernel" }

runtime = { git = "https://github.com/demikernel/runtime", rev = "e11b81477edc6e5abe23224711b498f9464e89b9" }

[patch."https://github.com/demikernel/runtime"]
runtime = { path = "/home/users/fabricio/msr/runtime" }
[patch."https://github.com/demikernel/inetstack"]
inetstack = { path = "/home/users/fabricio/msr/inetstack" }


[features]
default = [  ]
catnip-libos = [ "demikernel/catnip-libos" ]
catnap-libos = [ "demikernel/catnap-libos" ]
catpowder-libos = [ "demikernel/catpowder-libos" ]
catcollar-libos = [ "demikernel/catcollar-libos" ]
