# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "apps"
version = "1.0.3"
authors = [ "Microsoft Corporation" ]
description = "Demo Applications for Demikernel"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/apps"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"

[[bin]]
name = "tcp-dump"

[[bin]]
name = "tcp-echo"

[[bin]]
name = "tcp-pktgen"

[[bin]]
name = "udp-dump"

[[bin]]
name = "udp-echo"

[[bin]]
name = "udp-pktgen"

[[bin]]
name = "udp-relay"

[dependencies]
anyhow = "1.0.58"
clap = "3.2.12"
libc = "0.2.126"
log = "0.4.17"

demikernel = { git = "https://github.com/demikernel/demikernel", rev = "3aa9adeea5967521a639b1109ee245cf845a669c" }

[features]
default = [  ]
mlx4 = [ "demikernel/mlx4" ]
mlx5 = [ "demikernel/mlx5" ]
catnip-libos = [ "demikernel/catnip-libos" ]
catnap-libos = [ "demikernel/catnap-libos" ]
catpowder-libos = [ "demikernel/catpowder-libos" ]
catcollar-libos = [ "demikernel/catcollar-libos" ]
